@@ -6,8 +6,12 @@
  */
 
 package org.opensourcephysics.controls;
+
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.FileWriter;
@@ -19,13 +23,23 @@ import java.io.Writer;
 import java.lang.reflect.Array;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.net.MalformedURLException;
+import java.net.MalformedURLException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.BitSet;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+
 import javax.swing.JOptionPane;
+
+import org.opensourcephysics.controls.XML.ObjectLoader;
+import org.opensourcephysics.display.OSPRuntime;
+import org.opensourcephysics.media.core.VideoIO.FinalizableLoader;
 import org.opensourcephysics.tools.Resource;
 import org.opensourcephysics.tools.ResourceLoader;
 
@@ -35,42 +49,80 @@ import org.opensourcephysics.tools.ResourceLoader;
  * @author Douglas Brown
  * @version 1.0
  */
-public class XMLControlElement implements XMLControl {
+public final class XMLControlElement extends XMLNode implements XMLControl {
   // static constants
-  @SuppressWarnings("javadoc")
+
+	public interface FrameDataAdjusterI {
+		Object[] adjustFrameData(Object[] data);
+	}
+
 	public static final int ALWAYS_DECRYPT = 0;
-  @SuppressWarnings("javadoc")
+
 	public static final int PASSWORD_DECRYPT = 3;
-  @SuppressWarnings("javadoc")
+
 	public static final int NEVER_DECRYPT = 5;
   // static fields
-  @SuppressWarnings("javadoc")
+
 	public static int compactArraySize = 0;
   protected static String encoding = "UTF-8";                             //$NON-NLS-1$
   
   // instance fields
-  protected String className = "java.lang.Object";                        //$NON-NLS-1$ //changed by W. Christian
   protected Class<?> theClass = null;
-  protected String name;
+
   protected Map<String, Integer> counts = new HashMap<String, Integer>(); // maps numbered names to counts
   protected Object object;
-  protected XMLProperty parent;
+
   protected int level;
-  protected ArrayList<String> propNames = new ArrayList<String>();
-  protected ArrayList<XMLProperty> props = new ArrayList<XMLProperty>();
+	private ArrayList<String> propNames = new ArrayList<String>();
+	private ArrayList<XMLProperty> props = new ArrayList<XMLProperty>();
   protected BufferedReader input;
   protected BufferedWriter output;
-  @SuppressWarnings("javadoc")
+
 	public boolean canWrite;
   protected boolean valid = false;
   protected boolean readFailed = false;
   protected String version;
   protected String doctype = "osp10.dtd";                                 //$NON-NLS-1$
   private String basepath;
+
+	@Override
+	public String getBasepath() {
+		return basepath;
+	}
+
+	@Override
+	public void setBasepath(String basepath) {
+		this.basepath = basepath;
+	}
+
   private String password;
   private int decryptPolicy = ALWAYS_DECRYPT;
 
   /**
+	 * something being passed to the nascent control
+	 */
+	private Object data;
+
+	private Map<String, XMLControl> childMap;
+
+	private XMLControl[] childControls;
+
+	private Map<String, XMLProperty> propMap;
+
+	public ObjectLoader loader;
+
+	private boolean isFinalizable;
+
+	/**
+	 * see TrackerPanel.Loader
+	 * 
+	 * @return the TrackerIO.AsyncLoader if a Tracker object
+	 */
+	public Object getData() {
+		return data;
+	}
+
+	/**
    * Constructs an empty control for the Object class.
    */
   public XMLControlElement() {
@@ -84,7 +136,6 @@ public class XMLControlElement implements XMLControl {
    * @param type the class.
    */
   public XMLControlElement(Class<?> type) {
-    this();
     setObjectClass(type);
   }
 
@@ -94,7 +145,6 @@ public class XMLControlElement implements XMLControl {
    * @param obj the object.
    */
   public XMLControlElement(Object obj) {
-    this();
     setObjectClass(obj.getClass());
     saveObject(obj);
   }
@@ -105,7 +155,6 @@ public class XMLControlElement implements XMLControl {
    * @param parent the parent.
    */
   public XMLControlElement(XMLProperty parent) {
-    this();
     this.parent = parent;
     level = parent.getLevel();
   }
@@ -136,8 +185,42 @@ public class XMLControlElement implements XMLControl {
   }
 
 /**
-   * Constructs a control and reads the specified input.
-   * Input may be a file name or an xml string
+	 * BH we need to read the File object directly, as it will have the data in it
+	 * already.
+	 * 
+	 * @param xmlFile
+	 */
+	public XMLControlElement(File xmlFile) {
+		try {
+			String data = getFileData(xmlFile);
+			if (data != null) {
+				readData(data);
+				return;
+			}
+		} catch (Exception ex) {
+			OSPLog.warning("Failed to read xml: " + xmlFile + ex.getMessage()); //$NON-NLS-1$
+		}
+		readFailed = true;
+	}
+
+	/**
+	 * BH by far the simplest way to read a file in its entirety as byte[] or String
+	 * 
+	 * @param xmlFile
+	 * @return
+	 */
+	private String getFileData(File xmlFile) {
+		byte[] bytes = null;
+		try {
+			bytes = ResourceLoader.getURLContents(xmlFile.toURI().toURL(), false);
+		} catch (MalformedURLException e) {
+		}
+		return (bytes == null ? null : new String(bytes));
+	}
+
+	/**
+	 * Constructs a control and reads the specified input. Input may be a file name
+	 * or an xml string
    *
    * @param input the input string
    */
@@ -147,12 +230,8 @@ public class XMLControlElement implements XMLControl {
   }
 
 	private void readData(String input) {
-		if (input.startsWith("<?xml")) { //$NON-NLS-1$
-			readXML(input);
-		} else {
-			read(input);
+		readData(input);
 		}
-	}
 
 /**
    * Constructs a copy of the specified XMLControl.
@@ -165,11 +244,12 @@ public class XMLControlElement implements XMLControl {
   }
 
   /**
-   * Locks the control's interface. Values sent to the control will not
-   * update the display until the control is unlocked. Not implemented.
+	 * Locks the control's interface. Values sent to the control will not update the
+	 * display until the control is unlocked. Not implemented.
    *
    * @param lock boolean
    */
+	@Override
   public void setLockValues(boolean lock) {
 
   /** empty block */
@@ -181,11 +261,12 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @param value the boolean value
    */
+	@Override
   public void setValue(String name, boolean value) {
     if(name==null) {
       return;
     }
-    setXMLProperty(name, "boolean", String.valueOf(value), false); //$NON-NLS-1$
+		setXMLProperty(name, XMLProperty.TYPE_BOOLEAN, String.valueOf(value), false); //$NON-NLS-1$
   }
 
   /**
@@ -194,11 +275,12 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @param value the double value
    */
+	@Override
   public void setValue(String name, double value) {
     if(name==null) {
       return;
     }
-    setXMLProperty(name, "double", String.valueOf(value), false); //$NON-NLS-1$
+		setXMLProperty(name, XMLProperty.TYPE_DOUBLE, String.valueOf(value), false); //$NON-NLS-1$
   }
 
   /**
@@ -207,11 +289,12 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @param value the int value
    */
+	@Override
   public void setValue(String name, int value) {
     if(name==null) {
       return;
     }
-    setXMLProperty(name, "int", String.valueOf(value), false); //$NON-NLS-1$
+		setXMLProperty(name, XMLProperty.TYPE_INT, String.valueOf(value), false); //$NON-NLS-1$
   }
 
   /**
@@ -220,16 +303,22 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @param obj the object
    */
+	@Override
   public void setValue(String name, Object obj) {
   	setValue(name, obj, XMLPropertyElement.defaultWriteNullFinalArrayElements);
   }
 
+	@Override
+	public void setValue(String name, double[] val, int decimalPlaces) {
+		  setValue(name, new WrappedArray(val, decimalPlaces));
+	}
   /**
    * Sets a property with the specified name and object value.
    *
    * @param name the name
    * @param obj the object
-   * @param writeNullFinalElement true to write a final null array element (if needed)
+	 * @param writeNullFinalElement true to write a final null array element (if
+	 *                              needed)
    */
   public void setValue(String name, Object obj, boolean writeNullFinalElement) {
     if(name==null) {
@@ -237,27 +326,42 @@ public class XMLControlElement implements XMLControl {
     }
     // clear the property if obj is null
     if (obj==null) {
+			boolean childRemoved = false;
+			if (getPropMap().containsKey(name)) {
       Iterator<XMLProperty> it = props.iterator();
       while(it.hasNext()) {
         XMLProperty prop = it.next();
         if(name.equals(prop.getPropertyName())) {
           it.remove();
           propNames.remove(name);
+						getPropMap().remove(name);
+						if (getChildMap().remove(name) != null) {
+							childRemoved = true;
+						}
           break;
         }
       }
+			}
+			if (childRemoved) {
+				childControls = null;
+			}
       return;
     }
   	if (obj instanceof Boolean) {
   		setValue(name, ((Boolean)obj).booleanValue());
   		return;
   	}
-    String type = XML.getDataType(obj);
-    if(type!=null) {
-      if(type.equals("int")||type.equals("double")) { //$NON-NLS-1$ //$NON-NLS-2$
+		int type = XMLProperty.getDataType(obj);
+		switch (type) {
+		case XMLProperty.TYPE_UNKNOWN:
+			break;
+		case XMLProperty.TYPE_INT:
+		case XMLProperty.TYPE_DOUBLE:
         obj = obj.toString();
-      }
+			//$FALL-THROUGH$
+		default:
       setXMLProperty(name, type, obj, writeNullFinalElement);
+			break;			
     }
   }
 
@@ -267,12 +371,12 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @return the boolean value, or false if none found
    */
+	@Override
   public boolean getBoolean(String name) {
     XMLProperty prop = getXMLProperty(name);
-    if (prop!=null && prop.getPropertyType().equals("boolean")) {       //$NON-NLS-1$
+		if (prop != null && prop.getPropertyType() == XMLProperty.TYPE_BOOLEAN) { //$NON-NLS-1$
       return "true".equals(prop.getPropertyContent().get(0));          //$NON-NLS-1$
-    } 
-    else if (prop!=null && prop.getPropertyType().equals("string")) { //$NON-NLS-1$
+		} else if (prop != null && prop.getPropertyType() == XMLProperty.TYPE_STRING) { //$NON-NLS-1$
       return "true".equals(prop.getPropertyContent().get(0));          //$NON-NLS-1$
     }
     return false;
@@ -284,16 +388,19 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @return the double value, or Double.NaN if none found
    */
+	@Override
   public double getDouble(String name) {
     XMLProperty prop = getXMLProperty(name);
-    if((prop!=null) && (prop.getPropertyType().equals("double") //$NON-NLS-1$
-    		|| prop.getPropertyType().equals("int") //$NON-NLS-1$
-    		|| prop.getPropertyType().equals("string"))) { //$NON-NLS-1$
+		if (prop != null)
+			switch (prop.getPropertyType()) {
+			case XMLProperty.TYPE_DOUBLE:
+			case XMLProperty.TYPE_INT:
+			case XMLProperty.TYPE_STRING:
     	try {
     		return Double.parseDouble((String) prop.getPropertyContent().get(0));
     	} catch(Exception ex) {
-      	return Double.NaN;
       }
+				break;
     }
     return Double.NaN;
   }
@@ -304,21 +411,25 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @return the int value, or Integer.MIN_VALUE if none found
    */
+	@Override
   public int getInt(String name) {
     XMLProperty prop = getXMLProperty(name);
-    if((prop!=null) && (prop.getPropertyType().equals("int")  //$NON-NLS-1$
-    		|| prop.getPropertyType().equals("string"))) {           //$NON-NLS-1$
+		if (prop != null)
+			switch (prop.getPropertyType()) {
+			case XMLProperty.TYPE_INT:
+			case XMLProperty.TYPE_STRING:
     	try {
         return Integer.parseInt((String) prop.getPropertyContent().get(0));
       } catch(Exception ex) {
-      	return Integer.MIN_VALUE;
       }
-    } else if((prop!=null)&&prop.getPropertyType().equals("object")) { //$NON-NLS-1$
+				break;
+			case XMLProperty.TYPE_OBJECT:
       XMLControl control = (XMLControl) prop.getPropertyContent().get(0);
       if(control.getObjectClass()==OSPCombo.class) {
         OSPCombo combo = (OSPCombo) control.loadObject(null);
         return combo.getSelectedIndex();
       }
+				break;
     }
     return Integer.MIN_VALUE;
   }
@@ -329,17 +440,18 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @return the string value, or null if none found
    */
+	@SuppressWarnings("null")
+	@Override
   public String getString(String name) {
     XMLProperty prop = getXMLProperty(name);
-    if((prop!=null)&&prop.getPropertyType().equals("string")) { //$NON-NLS-1$
-      String content = (String) prop.getPropertyContent().get(0);
-      if(content.indexOf(XML.CDATA_PRE)!=-1) {
-        content = content.substring(content.indexOf(XML.CDATA_PRE)+XML.CDATA_PRE.length(), content.indexOf(XML.CDATA_POST));
+		int type = (prop == null ? XMLProperty.TYPE_UNKNOWN : prop.getPropertyType());		
+		if (type == XMLProperty.TYPE_STRING) {
+			return XML.removeCDATA((String) prop.getPropertyContent().get(0));
       }
-      return content;
-    } else if(name.equals("basepath")&&(getRootControl()!=null)) {     //$NON-NLS-1$
+		if (name.equals("basepath") && (getRootControl() != null)) { //$NON-NLS-1$
       return getRootControl().basepath;
-    } else if((prop!=null)&&prop.getPropertyType().equals("object")) { //$NON-NLS-1$
+		} 
+		if (type == XMLProperty.TYPE_OBJECT) {
       XMLControl control = (XMLControl) prop.getPropertyContent().get(0);
       if(control.getObjectClass()==OSPCombo.class) {
         OSPCombo combo = (OSPCombo) control.loadObject(null);
@@ -352,30 +464,20 @@ public class XMLControlElement implements XMLControl {
   /**
    * Gets the object value of the specified named property.
    *
+	 * "framedata" arrays will be adjusted only during loading, not export, 
+	 * and only if needed. In that case, this.data will be TrackerIO.AsyncLoader
+	 * 
+	 *
    * @param name the name
    * @return the object, or null if not found
    */
+	@Override
   public Object getObject(String name) {
     XMLProperty prop = getXMLProperty(name);
-    if(prop!=null) {
-      String type = prop.getPropertyType();
-      if(type.equals("object")) {            //$NON-NLS-1$
-        return objectValue(prop);
-      } else if(type.equals("array")) {      //$NON-NLS-1$
-        return arrayValue(prop);
-      } else if(type.equals("collection")) { //$NON-NLS-1$
-        return collectionValue(prop);
-      } else if(type.equals("int")) {        //$NON-NLS-1$
-        return new Integer(intValue(prop));
-      } else if(type.equals("double")) {     //$NON-NLS-1$
-        return new Double(doubleValue(prop));
-      } else if(type.equals("boolean")) {    //$NON-NLS-1$
-        return new Boolean(booleanValue(prop));
-      } else if(type.equals("string")) {     //$NON-NLS-1$
-        return stringValue(prop);
-      }
-    }
+		if (prop == null)
     return null;
+		Object o = getPropValue(prop, data);
+		return (data != null && name.equals("framedata") ? getAdjustedFrameData(o, data) : o);
   }
 
   /**
@@ -383,25 +485,29 @@ public class XMLControlElement implements XMLControl {
    *
    * @return a set of names
    */
+	@Override
   public Collection<String> getPropertyNames() {
     synchronized(propNames) {
       return new ArrayList<String>(propNames);
     }
   }
 
+	@Override
+	public Collection<String> getPropertyNamesRaw() {
+		return propNames;
+	}
+
   /**
-   * Gets the type of the specified property. Returns null if the property
-   * is not found.
+	 * Gets the type of the specified property. Returns null if the property is not
+	 * found.
    *
    * @param name the property name
    * @return the type
    */
-  public String getPropertyType(String name) {
+	@Override
+	public int getPropertyType(String name) {
     XMLProperty prop = getXMLProperty(name);
-    if(prop!=null) {
-      return prop.getPropertyType();
-    }
-    return null;
+		return (prop == null ? XMLProperty.TYPE_UNKNOWN : prop.getPropertyType());
   }
 
   /**
@@ -431,7 +537,8 @@ public class XMLControlElement implements XMLControl {
   /**
    * Sets the decryption policy.
    *
-   * @param policy the decryption policy: NEVER_DECRYPT, PASSWORD_DECRYPT or ALWAYS_DECRYPT
+	 * @param policy the decryption policy: NEVER_DECRYPT, PASSWORD_DECRYPT or
+	 *               ALWAYS_DECRYPT
    */
   public void setDecryptPolicy(int policy) {
     if(policy==NEVER_DECRYPT) {
@@ -443,29 +550,87 @@ public class XMLControlElement implements XMLControl {
     }
   }
 
+	static Object sync = new Object();
+
+	public void readAsync(String name, Function<String, Void> whenDone) {
+		synchronized (sync) {
+			// OSPLog.finest("reading " + name); //$NON-NLS-1$
+			Resource res = ResourceLoader.getResource(name);
+			if (res == null) {
+				processReader(name, null, null, whenDone);
+			} else if (res.getFile() != null) {
+				// synchronous for file
+				processReader(name, res, res.openReader(), whenDone);
+			} else {
+				ResourceLoader.getURLContentsAsync(res.getURL(), (bytes) -> {
+					if (bytes == null) {
+						processReader(name, null, null, whenDone);
+					} else {
+						processReader(name, res, ResourceLoader.readerForStream(new ByteArrayInputStream(bytes), null),
+								whenDone);
+					}
+					return null;
+				});
+			}
+		}
+	}
+
   /**
+	 * Read this file resource
+	 * @param name
+	 * @param res
+	 * @param in
+	 * @param whenDone will be passed a File[] array or null
+	 */
+	protected void processReader(String name, Resource res, BufferedReader in, Function<String, Void> whenDone) {
+		if (res == null) {
+			OSPLog.warning("Could not open " + name);
+			readFailed = true;
+			whenDone.apply(null);
+			return;
+		}
+		read(in);
+		whenDone.apply(readFailed ? null : setPath(name, res));
+	}
+
+	/**
+	 * read raw data or xml
+	 * 
+	 * @param input
+	 */
+	private void readData(String input) {
+		if (input.startsWith("<?xml")) { //$NON-NLS-1$
+			readXML(input);
+		} else {
+			read(input);
+		}
+	}
+
+	/**
    * Reads data into this control from a named source.
    *
-   * @param name the name
+	 * @param fileName the name
    * @return the path of the opened document or null if failed
    */
-  public String read(String name) {
-    OSPLog.finest("reading "+name); //$NON-NLS-1$
-    Resource res = ResourceLoader.getResource(name);
+	@Override
+	public String read(String fileName) {
+		synchronized (sync) {
+			//OSPLog.debug("XMLControlElement.reading " + fileName); //$NON-NLS-1$
+			Resource res = ResourceLoader.getResource(fileName);
     if(res!=null) {
-      read(res.openReader());
-      String path = XML.getDirectoryPath(name);
-      if(!path.equals("")) { //$NON-NLS-1$
-        ResourceLoader.addSearchPath(path);
-        basepath = path;
-      } else {
-        basepath = XML.getDirectoryPath(res.getAbsolutePath());
+				try {
+					BufferedReader in = res.openReader();
+					if (in != null) {
+						// BH just avoids the NullPointerException, particularly for prefs files
+						read(in);
+						return setPath(fileName, res);
+					}
+				} catch (Exception e) {
       }
-      File file = res.getFile();
-      canWrite = ((file!=null)&&file.canWrite());
-      return res.getAbsolutePath();
     }
+			OSPLog.warning("Could not open " + fileName);
     readFailed = true;
+		}
     return null;
   }
 
@@ -474,27 +639,28 @@ public class XMLControlElement implements XMLControl {
    *
    * @param xml the xml string
    */
+	@Override
   public void readXML(String xml) {
-    input = new BufferedReader(new StringReader(xml));
-    readInput();
-    if(!failedToRead()) {
+		readXML(xml, null);
+	}
+	
+	private boolean readXML(String xml, String requiredType) {
+		if (readInput(xml == null ? null : new BufferedReader(new StringReader(xml)), requiredType)) {
       canWrite = false;
     }
+		return !readFailed;
   }
 
   /**
-   * Reads the control from a Reader.
+	 * Reads the control from a Reader, setting readFailed if there are any problems.
    *
    * @param in the Reader
    */
+	@Override
   public void read(Reader in) {
-    if(in instanceof BufferedReader) {
-      input = (BufferedReader) in;
-    } else {
-      input = new BufferedReader(in);
-    }
-    readInput();
+		readInput(in == null ? null : in instanceof BufferedReader ? (BufferedReader) in : new BufferedReader(in), null);
     try {
+			if (input != null)
       input.close();
     } catch(IOException ex) {
       ex.printStackTrace();
@@ -502,8 +668,10 @@ public class XMLControlElement implements XMLControl {
   }
 
   /**
-   * Reads data into this control from a named source if the source
-   * specifies the same class as the current className.
+	 * Reads data into this control from a named source if the source specifies the
+	 * same class as the current className.
+	 * 
+	 * BH: never called
    *
    * @param name the name
    * @param type the class
@@ -511,31 +679,33 @@ public class XMLControlElement implements XMLControl {
    */
   public String readForClass(String name, Class<?> type) {
     Resource res = ResourceLoader.getResource(name);
-    if(res==null) {
-      return null;
+		return (readInput(res == null ? null : new BufferedReader(res.openReader()), type.getName()) 
+				? setPath(name, res) : null);
     }
-    input = new BufferedReader(res.openReader());
-    if(!isInputForClass(type)) {
-      return null;
-    }
-    return read(name);
-  }
 
   /**
-   * Reads this control from an xml string if the xml specifies the
-   * same class as the current className.
+	 * Reads this control from an xml string if the xml specifies the same class as
+	 * the current className. Utilized in org.colos.ejs.library.Simulation
    *
    * @param xml the xml string
    * @param type the class
    * @return true if successfully read
    */
   public boolean readXMLForClass(String xml, Class<?> type) {
-    input = new BufferedReader(new StringReader(xml));
-    if(!isInputForClass(type)) {
-      return false;
+		return readXML(xml, type.getName());
+	}
+
+	private String setPath(String name, Resource res) {
+		String path = XML.getDirectoryPath(name);
+		if (path.length() == 0) {
+			basepath = XML.getDirectoryPath(res.getAbsolutePath());
+		} else {
+			ResourceLoader.addSearchPath(path);
+			basepath = path;
     }
-    readXML(xml);
-    return !readFailed;
+		File file = res.getFile();
+		canWrite = ((file != null) && file.canWrite());
+		return res.getAbsolutePath();
   }
 
   /**
@@ -543,6 +713,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @return <code>true</code> if the most recent read operation failed
    */
+	@Override
   public boolean failedToRead() {
     return readFailed;
   }
@@ -553,8 +724,10 @@ public class XMLControlElement implements XMLControl {
    * @param fileName the file name
    * @return the path of the saved document or null if failed
    */
+	@Override
   public String write(String fileName) {
     canWrite = true;
+		if (!OSPRuntime.isJS) { // BH 2022.03.19 skip checks in JS
     int n = fileName.lastIndexOf("/"); //$NON-NLS-1$
     if(n<0) {
       n = fileName.lastIndexOf("\\"); //$NON-NLS-1$
@@ -567,9 +740,10 @@ public class XMLControlElement implements XMLControl {
         return null;
       }
     }
+		}
     try {
       File file = new File(fileName);
-      if(file.exists()&&!file.canWrite()) {
+			if (file.exists() && !file.canWrite()) { // canWrite always true in JS
     		JOptionPane.showMessageDialog(null, 
     				ControlsRes.getString("Dialog.ReadOnly.Message")+": "+file.getPath(),  //$NON-NLS-1$ //$NON-NLS-2$
     				ControlsRes.getString("Dialog.ReadOnly.Title"),  //$NON-NLS-1$
@@ -597,7 +771,9 @@ public class XMLControlElement implements XMLControl {
         }
         writeDocType(new FileWriter(fileName));
       }
-      if(file.exists()) {
+
+			if (/** @j2sNative true || */
+			file.exists()) {
         return XML.getAbsolutePath(file);
       }
     } catch(IOException ex) {
@@ -612,6 +788,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @param out the Writer
    */
+	@Override
   public void write(Writer out) {
     try {
       output = new BufferedWriter(out);
@@ -651,6 +828,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @return the xml string
    */
+	@Override
   public String toXML() {
     return toString();
   }
@@ -665,10 +843,10 @@ public class XMLControlElement implements XMLControl {
   }
 
   /**
-   * Gets the valid property. When true, this writes the DTD and defines
-   * the DocType when writing an xml document. Note: the presence or absense
-   * of the DocType header and DTD has no effect on the read() methods--this
-   * will always read a well-formed osp document and ignore a non-osp document.
+	 * Gets the valid property. When true, this writes the DTD and defines the
+	 * DocType when writing an xml document. Note: the presence or absense of the
+	 * DocType header and DTD has no effect on the read() methods--this will always
+	 * read a well-formed osp document and ignore a non-osp document.
    *
    * @return <code>true</code> if this is valid
    */
@@ -721,11 +899,12 @@ public class XMLControlElement implements XMLControl {
    * @param type the <code>Class</code> of the object
    */
   public void setObjectClass(Class<?> type) {
-    if((object!=null)&&!type.isInstance(object)) {
-      throw new RuntimeException(object+" "+ControlsRes.getString("XMLControlElement.Exception.NotInstanceOf")+" "+type); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+		if (object != null && !type.isInstance(object)) {
+			throw new RuntimeException(
+					object + " " + ControlsRes.getString("XMLControlElement.Exception.NotInstanceOf") + " " + type); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
     }
+		theClass = type;
     className = type.getName();
-    theClass = type;
   }
 
   /**
@@ -733,30 +912,22 @@ public class XMLControlElement implements XMLControl {
    *
    * @return the <code>Class</code> of the object
    */
+	@Override
   public Class<?> getObjectClass() {
-    if(className==null) {
-      return null;
-    }
-    if((theClass!=null)&&theClass.getName().equals(className)) {
+		if (className == null || (theClass != null && theClass.getName().equals(className))) {
       return theClass;
     }
     theClass = null;
     try {
-      theClass = Class.forName(className);
+			return theClass = Class.forName(className);
     } catch(ClassNotFoundException ex) {
-
-    /** empty block */
-    }
+			try {
     ClassLoader loader = XML.getClassLoader();
-    if((loader!=null)&&(theClass==null)) {
-      try {
-        theClass = loader.loadClass(className);
-      } catch(ClassNotFoundException ex) {
-
-      /** empty block */
+				return (loader == null ? null : (theClass = loader.loadClass(className)));
+			} catch (ClassNotFoundException e) {
       }
+			return theClass;
     }
-    return theClass;
   }
 
   /**
@@ -764,6 +935,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @return the object class name
    */
+	@Override
   public String getObjectClassName() {
     return className;
   }
@@ -773,6 +945,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @param obj the object to save.
    */
+	@Override
   public void saveObject(Object obj) {
     if(obj==null) {
       obj = object;
@@ -794,19 +967,37 @@ public class XMLControlElement implements XMLControl {
   }
 
   /**
-   * Loads an object with data from this element. This asks the user for
-   * approval and review before importing data from mismatched classes.
+	 * BH! THIS METHOD COULD FAIL IN JAVASCRIPT because importAll is false
+	 * 
+	 * 111 references !!!
+	 * 
+	 * 
+	 * Loads an object with data from this element. This asks the user for approval
+	 * and review before importing data from mismatched classes.
    *
    * @param obj the object to load
    * @return the loaded object
    */
+	@Override
   public Object loadObject(Object obj) {
     return loadObject(obj, false, false);
   }
 
+	@Override
+	public Object loadObject(Object obj, Object data) {
+		this.data = data;
+		return loadObject(obj, false, false);
+	}
+
   /**
-   * Loads an object with data from this element. This asks the user to
-   * review data from mismatched classes before importing it.
+	 * BH! THIS METHOD WILL FAIL IN JAVASCRIPT when autoImport is false
+	 * 
+	 * (not called in OSP or Tracker?)
+	 * 
+	 * 
+	 * 
+	 * Loads an object with data from this element. This asks the user to review
+	 * data from mismatched classes before importing it.
    *
    * @param obj the object to load
    * @param autoImport true to automatically import data from mismatched classes
@@ -819,34 +1010,55 @@ public class XMLControlElement implements XMLControl {
   /**
    * Loads an object with data from this element.
    *
+	 * false for BOTH parameters autoImport and importAll will FAIL IN JAVASCRIPT
+	 * 
+	 *
    * @param obj the object to load
    * @param autoImport true to automatically import data from mismatched classes
    * @param importAll true to import all importable data
    * @return the loaded object
    */
+	@SuppressWarnings("null")
   public Object loadObject(Object obj, boolean autoImport, boolean importAll) {
-    Class<?> type = getObjectClass();
-    if(type==null) {
-      if(obj!=null) {
+		Class<?> myType = getObjectClass();
+		Class<?> oclass = (obj == null ? null : obj.getClass());
+		// we must establish relationship between the control's XML type
+		// and the object's Java type
+		if (myType == null) {
+			if (oclass == null) {
+				return null;
+			}
         if(!autoImport) {
-          int result = JOptionPane.showConfirmDialog(null, ControlsRes.getString("XMLControlElement.Dialog.UnknownClass.Message")+" \""+className+"\""+XML.NEW_LINE //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-            +ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Query")+" \""+obj.getClass().getName()+"\"", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				int result = JOptionPane.showConfirmDialog(null,
+						ControlsRes.getString("XMLControlElement.Dialog.UnknownClass.Message") + " \"" + className //$NON-NLS-1$ //$NON-NLS-2$
+								+ "\"" + XML.NEW_LINE //$NON-NLS-1$
+								+ ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Query") + " \"" //$NON-NLS-1$ //$NON-NLS-2$
+								+ obj.getClass().getName() + "\"", //$NON-NLS-1$
               ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Title"), //$NON-NLS-1$
                 JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE);
           if(result!=JOptionPane.YES_OPTION) {
             return obj;
           }
         }
+
+			// BH -
+
         if(!importInto(obj, importAll)) {
           return obj;
         }
-        type = obj.getClass();
-      } else {
-        return null;
+			myType = oclass;
+		} else if (obj == null) {
+			oclass = myType;
       }
-    }
+		boolean needLoader = (object == null || myType != oclass || this.loader == null);
+
+		XML.ObjectLoader loader = null;
     try {
-      if(XML.getLoader(type).getClass()==XML.getLoader(obj.getClass()).getClass()) {
+			loader = (needLoader ? XML.getLoader(myType) : this.loader);
+
+			// BH 2020.02.13 adding check for null obj
+			// type may be
+			if (myType == oclass || oclass != null && loader.getClass() == XML.getLoader(oclass).getClass()) {
         autoImport = true;
         importAll = true;
       }
@@ -854,10 +1066,13 @@ public class XMLControlElement implements XMLControl {
 
     /** empty block */
     }
-    if((obj!=null)&&!type.isInstance(obj)) {
+		if (obj != null && myType != oclass && !myType.isInstance(obj)) {
       if(!autoImport) {
-        int result = JOptionPane.showConfirmDialog(null, ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Message")+" \""+type.getName()+"\""+XML.NEW_LINE //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-          +ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Query")+" \""+obj.getClass().getName()+"\"", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				int result = JOptionPane.showConfirmDialog(null,
+						ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Message") + " \"" //$NON-NLS-1$ //$NON-NLS-2$
+								+ myType.getName() + "\"" + XML.NEW_LINE //$NON-NLS-1$
+								+ ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Query") + " \"" //$NON-NLS-1$ //$NON-NLS-2$
+								+ obj.getClass().getName() + "\"", //$NON-NLS-1$
             ControlsRes.getString("XMLControlElement.Dialog.MismatchedClass.Title"), //$NON-NLS-1$
               JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE);
         if(result!=JOptionPane.YES_OPTION) {
@@ -867,21 +1082,23 @@ public class XMLControlElement implements XMLControl {
       if(!importInto(obj, importAll)) {
         return obj;
       }
-      type = obj.getClass();
+			loader = XML.getLoader(myType = oclass);
     }
-    XML.ObjectLoader loader = XML.getLoader(type);
     if(obj==null) { // if obj is null, try to create a new one
-      if(object==null) {
-        object = loader.createObject(this);
+			obj = (object == null ? loader.createObject(this) : object);
+			if (obj == null || !myType.isInstance(obj)) {
+				return obj;
       }
-      obj = object;
     }
-    if(obj==null) {
-      return null; // unable to create new obj
+		obj = loader.loadObject(this, obj);
+		//System.out.println("XMLControlElement loading " + data + " " + className);
+		if (isFinalizable || loader instanceof FinalizableLoader) {
+			isFinalizable = true;
+			if (!((FinalizableLoader) loader).isFinalized()) {
+			// VideoPanels and VideoClips
+				this.loader = loader;
+				this.object = obj;
     }
-    if(type.isInstance(obj)) {
-      obj = loader.loadObject(this, obj);
-      object = obj;
     }
     return obj;
   }
@@ -889,16 +1106,24 @@ public class XMLControlElement implements XMLControl {
   /**
    * Clears all properties.
    */
+	@Override
   public void clearValues() {
     props.clear();
     propNames.clear();
+		if (propMap != null)
+			propMap.clear();
+		if (childMap != null) {
+			childMap.clear();
+			childControls = null;
   }
+	}
 
   /**
    * Method required by the Control interface.
    *
    * @param s the string
    */
+	@Override
   public void println(String s) {
     System.out.println(s);
   }
@@ -906,6 +1131,7 @@ public class XMLControlElement implements XMLControl {
   /**
    * Method required by the Control interface.
    */
+	@Override
   public void println() {
     System.out.println();
   }
@@ -915,6 +1141,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @param s the string
    */
+	@Override
   public void print(String s) {
     System.out.print(s);
   }
@@ -922,8 +1149,9 @@ public class XMLControlElement implements XMLControl {
   /**
    * Method required by the Control interface.
    */
+	@Override
   public void clearMessages() {
-
+		System.out.println("XMLControlElment.clearMessages");
   /** empty block */
   }
 
@@ -932,6 +1160,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @param s the string
    */
+	@Override
   public void calculationDone(String s) {
 
   /** empty block */
@@ -942,6 +1171,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @return a name
    */
+	@Override
   public String getPropertyName() {
     XMLProperty parent = getParentProperty();
     // if no class name, return parent name
@@ -959,8 +1189,7 @@ public class XMLControlElement implements XMLControl {
       	if (myName!=null && !"".equals(myName)) { //$NON-NLS-1$
           name = className.substring(className.lastIndexOf(".")+1); //$NON-NLS-1$
       		name += " \""+myName+"\""; //$NON-NLS-1$ //$NON-NLS-2$
-      	}
-      	else {
+				} else {
 	        XMLProperty root = this;
 	        while(root.getParentProperty()!=null) {
 	          root = root.getParentProperty();
@@ -984,30 +1213,13 @@ public class XMLControlElement implements XMLControl {
   }
 
   /**
-   * Gets the property type.
-   *
-   * @return the type
-   */
-  public String getPropertyType() {
-    return "object"; //$NON-NLS-1$
-  }
-
-  /**
    * Gets the property class.
    *
    * @return the class
    */
+	@Override
   public Class<?> getPropertyClass() {
     return getObjectClass();
-  }
-
-  /**
-   * Gets the immediate parent property, if any.
-   *
-   * @return the parent
-   */
-  public XMLProperty getParentProperty() {
-    return parent;
   }
 
   /**
@@ -1015,6 +1227,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @return a non-negative integer
    */
+	@Override
   public int getLevel() {
     return level;
   }
@@ -1024,43 +1237,52 @@ public class XMLControlElement implements XMLControl {
    *
    * @return a list of XMLProperties
    */
+	@Override
   public List<Object> getPropertyContent() {
     return new ArrayList<Object>(props);
   }
 
   /**
+	 * Gets the property content of this control.
+	 *
+	 * @return a list of XMLProperties
+	 */
+	@Override
+	public List<XMLProperty> getPropsRaw() {
+		return props;
+	}
+
+	/**
    * Gets the named XMLControl child of this property. May return null.
    *
    * @param name the property name
    * @return the XMLControl
    */
+	@Override
   public XMLControl getChildControl(String name) {
-    XMLControl[] children = getChildControls();
-    for(int i = 0; i<children.length; i++) {
-      if(children[i].getPropertyName().equals(name)) {
-        return children[i];
-      }
-    }
-    return null;
+		return getChildMap().get(name);
   }
 
   /**
-   * Gets the XMLControl children of this property. The returned array has
-   * length for type "object" = 1, "collection" and "array" = 0+, other
-   * types = 0.
+	 * Gets the XMLControl children of this property. The returned array has length
+	 * for type "object" = 1, "collection" and "array" = 0+, other types = 0.
    *
    * @return an XMLControl array
    */
+	@Override
   public XMLControl[] getChildControls() {
+		if (childControls == null) {
     ArrayList<XMLControl> list = new ArrayList<XMLControl>();
     Iterator<XMLProperty> it = props.iterator();
     while(it.hasNext()) {
       XMLProperty prop = it.next();
-      if(prop.getPropertyType().equals("object")) { //$NON-NLS-1$
+				if (prop.getPropertyType() == XMLProperty.TYPE_OBJECT) { //$NON-NLS-1$
         list.add((XMLControl) prop.getPropertyContent().get(0));
       }
     }
-    return list.toArray(new XMLControl[0]);
+			childControls = list.toArray(new XMLControl[list.size()]);
+		}
+		return childControls;
   }
 
   /**
@@ -1083,8 +1305,8 @@ public class XMLControlElement implements XMLControl {
   }
 
   /**
-   * Appends numbering to a specified name. Increments the number each time
-   * this is called for the same name.
+	 * Appends numbering to a specified name. Increments the number each time this
+	 * is called for the same name.
    *
    * @param name the name
    * @return the name with appended numbering
@@ -1092,21 +1314,11 @@ public class XMLControlElement implements XMLControl {
   public String addNumbering(String name) {
     Integer count = counts.get(name);
     if(count==null) {
-      count = new Integer(0);
+			count = Integer.valueOf(0);
     }
-    count = new Integer(count.intValue()+1);
+		count = Integer.valueOf(count.intValue() + 1);
     counts.put(name, count);
     return name+" "+count.toString(); //$NON-NLS-1$
-  }
-
-  /**
-   * This does nothing since the property type is "object".
-   *
-   * @param stringValue the string value of a primitive or string property
-   */
-  public void setValue(String stringValue) {
-
-  /** empty block */
   }
 
   /**
@@ -1114,6 +1326,7 @@ public class XMLControlElement implements XMLControl {
    *
    * @return the string xml representation
    */
+	@Override
   public String toString() {
     StringBuffer xml = new StringBuffer(""); //$NON-NLS-1$
     // write the header if this is the top level
@@ -1165,10 +1378,19 @@ public class XMLControlElement implements XMLControl {
   public <T> List<T> getObjects(Class<T> type, boolean useChooser) {
     java.util.List<XMLProperty> props;
     if(useChooser) {
+			// BH never used?
+
+			/**
+			 * @j2sNative alert("XMLControlElement.getObjects with chooser called -- not
+			 *            configured to be asynchronous");
+			 */
+
       String name = type.getName();
       name = name.substring(name.lastIndexOf(".")+1);                                                                                                                                                                           //$NON-NLS-1$
       // select objects using an xml tree chooser
-      XMLTreeChooser chooser = new XMLTreeChooser(ControlsRes.getString("XMLControlElement.Chooser.SelectObjectsOfClass.Title"), ControlsRes.getString("XMLControlElement.Chooser.SelectObjectsOfClass.Label")+" "+name, null); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+			XMLTreeChooser chooser = new XMLTreeChooser(
+					ControlsRes.getString("XMLControlElement.Chooser.SelectObjectsOfClass.Title"), //$NON-NLS-1$
+					ControlsRes.getString("XMLControlElement.Chooser.SelectObjectsOfClass.Label") + " " + name, null); //$NON-NLS-1$ //$NON-NLS-2$
       props = chooser.choose(this, type);
     } else {
       // select all objects of desired type using an xml tree
@@ -1191,11 +1413,13 @@ public class XMLControlElement implements XMLControl {
    *
    * @return a clone
    */
+	@Override
   public Object clone() {
     return new XMLControlElement(this);
   }
 
-  // ____________________________ private methods _________________________________
+	// ____________________________ private methods
+	// _________________________________
 
   /**
    * Determines if this is (the child of) an array or collection item.
@@ -1222,7 +1446,7 @@ public class XMLControlElement implements XMLControl {
     // get the list of importable properties
     XMLControl control = new XMLControlElement(obj);
     Collection<String> list = control.getPropertyNames();
-    list.retainAll(this.getPropertyNames());
+		list.retainAll(this.getPropertyNamesRaw());
     // add property values
     Collection<String> names = new ArrayList<String>();
     Collection<Object> values = new ArrayList<Object>();
@@ -1233,49 +1457,80 @@ public class XMLControlElement implements XMLControl {
         continue;
       }
       names.add(propName);                          // keeps names in same order as values
-      if(prop.getPropertyType().equals("object")) { //$NON-NLS-1$
+			if (prop.getPropertyType() == XMLProperty.TYPE_OBJECT) { //$NON-NLS-1$
         values.add(prop.getPropertyClass().getSimpleName());
       } else {
         values.add(prop.getPropertyContent().get(0));
       }
     }
+		if (names.isEmpty() || importAll) {
+			return processImport(control, names);
+		}
+
+		// BH! This next call will return FALSE FOR JAVASCRIPT because we can't make
+		// this central method asynchronous. :(
+
     // choose the properties to import
+		// BH This one has to be synchronous and so will fail in JavaScript.
+
+		boolean[] isOK = new boolean[1];
+
     ListChooser chooser = new ListChooser(ControlsRes.getString("XMLControlElement.Chooser.ImportObjects.Title"), //$NON-NLS-1$
-      ControlsRes.getString("XMLControlElement.Chooser.ImportObjects.Label")); //$NON-NLS-1$
-    if(names.isEmpty()||importAll||chooser.choose(names, names, values)) {
+				ControlsRes.getString("XMLControlElement.Chooser.ImportObjects.Label"), new ActionListener() {
+
+					@Override
+					public void actionPerformed(ActionEvent e) {
+						if (e.getID() == ActionEvent.ACTION_PERFORMED) {
+							processImport(control, names);
+							isOK[0] = true;
+						}
+					}
+
+				});
+		chooser.choose(names, names, values, null, null, null);
+		// beween these two statements in Java, the above actionPerformed will occur.
+		// but JavaScript is going to return prior to that.
+		return isOK[0];
+	}
+
+	private boolean processImport(XMLControl control, Collection<String> names) {
       // names list now contains property names to keep
       Iterator<XMLProperty> it = props.iterator();
       while(it.hasNext()) {
-        XMLProperty prop = it.next();
-        if(!names.contains(prop.getPropertyName())) {
+			String name = it.next().getPropertyName();
+			if (!names.contains(name)) {
           it.remove();
-          propNames.remove(prop.getPropertyName());
+				propNames.remove(name);
+				getPropMap().remove(name);
         }
       }
       // add object properties not in the names list to this control
-      Iterator<String> it2 = control.getPropertyNames().iterator();
+		Iterator<String> it2 = control.getPropertyNamesRaw().iterator();
       while(it2.hasNext()) {
         String name = it2.next();
         if(names.contains(name)) {
           continue;
         }
-        String propType = control.getPropertyType(name);
-        if(propType.equals("int")) {            //$NON-NLS-1$
+			switch (control.getPropertyType(name)) {
+			case XMLProperty.TYPE_INT: //$NON-NLS-1$
           setValue(name, control.getInt(name));
-        } else if(propType.equals("double")) {  //$NON-NLS-1$
+				break;
+			case XMLProperty.TYPE_DOUBLE: //$NON-NLS-1$
           setValue(name, control.getDouble(name));
-        } else if(propType.equals("boolean")) { //$NON-NLS-1$
+				break;
+			case XMLProperty.TYPE_BOOLEAN: //$NON-NLS-1$
           setValue(name, control.getBoolean(name));
-        } else if(propType.equals("string")) {  //$NON-NLS-1$
+				break;
+			case XMLProperty.TYPE_STRING: //$NON-NLS-1$
           setValue(name, control.getString(name));
-        } else {
+				break;
+			default:
           setValue(name, control.getObject(name));
+				break;
         }
       }
       return true;
     }
-    return false;
-  }
 
   /**
    * Sets an XML property.
@@ -1283,29 +1538,47 @@ public class XMLControlElement implements XMLControl {
    * @param name the name
    * @param type the type
    * @param value the value
-   * @param writeNullFinalArrayElement true to write a final null array element (if needed)
+	 * @param writeNullFinalArrayElement true to write a final null array element
+	 *                                   (if needed)
    */
-  private void setXMLProperty(String name, String type, Object value, boolean writeNullFinalArrayElement) {
+	private void setXMLProperty(String name, int type, Object value, boolean writeNullFinalArrayElement) {
     // remove any previous property with the same name
-    int i = -1;
+		XMLPropertyElement prop = new XMLPropertyElement(this, name, type, value, writeNullFinalArrayElement);
+		
     if(propNames.contains(name)) {
       Iterator<XMLProperty> it = props.iterator();
-      while(it.hasNext()) {
-        i++;
-        XMLProperty prop = it.next();
-        if(prop.getPropertyName().equals(name)) {
+			for (int i = 0; it.hasNext(); i++) {
+				XMLProperty p = it.next();
+				if (p.getPropertyName().equals(name)) {
           it.remove();
-          break;
+					setProperty(name, prop, i);
+					return;
         }
       }
     } else {
       propNames.add(name);
     }
-    if(i>-1) {
-      props.add(i, new XMLPropertyElement(this, name, type, value, writeNullFinalArrayElement));
-    } else {
-      props.add(new XMLPropertyElement(this, name, type, value, writeNullFinalArrayElement));
+		setProperty(name, prop, -1);
+	}
+
+	private void setProperty(String name, XMLProperty prop, int i) {
+		if (i < 0)
+			props.add(prop);
+		else
+			props.add(i, prop);
+		getPropMap().put(name, prop);
+		if (prop.getPropertyType() == XMLProperty.TYPE_OBJECT) { //$NON-NLS-1$
+			getChildMap().put(name, ((XMLControl) prop.getPropertyContent().get(0)));
+			childControls = null;
+		}
+
+	}
+
+	private Map<String, XMLProperty> getPropMap() {
+		if (propMap == null) {
+			propMap = new HashMap<String, XMLProperty>();
     }
+		return propMap;
   }
 
   /**
@@ -1315,55 +1588,49 @@ public class XMLControlElement implements XMLControl {
    * @return the XMLProperty
    */
   private XMLProperty getXMLProperty(String name) {
-    if(name==null) {
-      return null;
+		return (name == null ? null : getPropMap().get(name));
     }
-    Iterator<XMLProperty> it = props.iterator();
-    while(it.hasNext()) {
-      XMLProperty prop = it.next();
-      if(name.equals(prop.getPropertyName())) {
-        return prop;
-      }
-    }
-    return null;
-  }
 
   /**
-   * Reads this control from the current input.
+	 * Reads this control from the current input, optionally require className.
+	 * 
+	 * @param in
+	 * @param className
    */
-  private void readInput() {
+	private boolean readInput(BufferedReader in, String className) {
+		if (in == null) {
+			readFailed = true;
+			return false;
+		}
+		//long t0 = Performance.now(0);
+		this.input = in;
     readFailed = false;
     try {
       // get document root opening tag line
       String openingTag = input.readLine();
       int count = 0;
-      while (openingTag!=null && openingTag.indexOf("<object class=")==-1) { //$NON-NLS-1$
+			while (openingTag != null && openingTag.indexOf("<object class=") < 0) { //$NON-NLS-1$
         count++;
         if (count>9) {
         	// stop reading at 10 lines
         	readFailed = true;
-        	return;
+					return false;
         }
         openingTag = input.readLine();
       }
       // read this element from the root
       if(openingTag!=null) {
         // get version, if any
-        String xml = openingTag;
-        int i = xml.indexOf("version=");                               //$NON-NLS-1$
-        if(i!=-1) {
-          xml = xml.substring(i+9);
-          version = xml.substring(0, xml.indexOf("\""));               //$NON-NLS-1$
-        }
-        readObject(this, openingTag);
+				version = XML.getAttr(openingTag, "version", version);
+				readObject(this, openingTag, className);
       } else {
         readFailed = true;
-        return;
+				return false;
       }
     } catch(Exception ex) {
       readFailed = true;
       OSPLog.warning("Failed to read xml: "+ex.getMessage());          //$NON-NLS-1$
-      return;
+			return false;
     }
     // if object class is Cryptic, decrypt and inspect
     if(Cryptic.class.equals(getObjectClass())) {
@@ -1373,7 +1640,7 @@ public class XMLControlElement implements XMLControl {
       // return if decrypted xml is not readable by a test control
       XMLControl test = new XMLControlElement(xml);
       if(test.failedToRead()) {
-        return;
+				return false;
       }
       // keep current password for possible verification needs
       String pass = password;
@@ -1382,12 +1649,13 @@ public class XMLControlElement implements XMLControl {
       // return if decrypt policy is NEVER or unverified PASSWORD
       switch(decryptPolicy) {
          case NEVER_DECRYPT :
-           return;
+				return false;
          case PASSWORD_DECRYPT :
            if((password!=null)&&!password.equals("")&& //$NON-NLS-1$
                         !password.equals(pass)) {
              if(!Password.verify(password, null)) {
-               return;
+						readFailed = true; // BH Yes??? was not here
+						return false;
              }
            }
       }
@@ -1396,8 +1664,10 @@ public class XMLControlElement implements XMLControl {
       object = null;
       className = Object.class.getName();
       theClass = null;
-      readXML(xml);
+			return readXML(xml, null);
     }
+		//OSPLog.debug("!!! " + Performance.now(t0) + " XMLControlElement.readData " + className);
+		return !readFailed;
   }
 
   /**
@@ -1424,27 +1694,48 @@ public class XMLControlElement implements XMLControl {
     return false;
   }
 
+	//	/**
+//	 * Checks to see if the input is for the specified class.
+//	 */
+//	private boolean isInputForClass(Class<?> type) {
+//		try {
+//			// get document root tag
+//			String xml = input.readLine();
+//			if (!xml.startsWith("<"))
+//				return false;
+//			while ((xml != null) && (xml.indexOf("<object") == -1)) { //$NON-NLS-1$
+//				xml = input.readLine();
+//			}
+//			// check class name
+//			if (xml != null) {
+//				xml = xml.substring(xml.indexOf("class=") + 7); //$NON-NLS-1$
+//				String className = xml.substring(0, xml.indexOf("\"")); //$NON-NLS-1$
+//				if (className.equals(type.getName())) {
+//					return true;
+//				}
+//			}
+//		} catch (Exception ex) {
+//			ex.printStackTrace();
+//		}
+//		return false;
+//	}
+
   /**
    * Reads the current input into an XMLcontrolElement.
    *
    * @param control the control to load
    * @param xml the xml opening tag line
+	 * @param requiredType required class name or null
    * @return the loaded element
    * @throws IOException
    */
-  private XMLControlElement readObject(XMLControlElement control, String xml) throws IOException {
+	private XMLControlElement readObject(XMLControlElement control, String xml, String requiredType) throws IOException {
     control.clearValues();
-    // set class name
-    xml = xml.substring(xml.indexOf("class=")+7); //$NON-NLS-1$
-    String className = xml.substring(0, xml.indexOf("\"")); //$NON-NLS-1$
-    // workaround for media package name change
-    int i = className.lastIndexOf(".");                     //$NON-NLS-1$
-    if(i>-1) {
-      String packageName = className.substring(0, i);
-      if(packageName.endsWith("org.opensourcephysics.media")) { //$NON-NLS-1$
-        className = packageName+".core"+className.substring(i); //$NON-NLS-1$
+		String className = getClassName(xml);
+		if (requiredType != null && !className.equals(requiredType)) {
+			readFailed = true;
+			return null;
       }
-    }
     control.className = className;
     // look for closing object tag on same line
     if(xml.indexOf("/>")!=-1) { //$NON-NLS-1$
@@ -1456,20 +1747,35 @@ public class XMLControlElement implements XMLControl {
     xml = input.readLine();
     while(xml!=null) {
       // closing object tag
-      if(xml.indexOf("</object>")!=-1) {      //$NON-NLS-1$
+			if (xml.indexOf("</object>") >= 0) { //$NON-NLS-1$
         input.readLine();
         return control;
       }
       // opening property tag
-      else if(xml.indexOf("<property")!=-1) { //$NON-NLS-1$
-        XMLProperty child = readProperty(new XMLPropertyElement(prop), xml);
-        control.props.add(child);
-        control.propNames.add(child.getPropertyName());
+			else if (xml.indexOf("<property") >= 0) { //$NON-NLS-1$
+				control.addProperty(readProperty(new XMLPropertyElement(prop), xml));
       }
       xml = input.readLine();
     }
     return control;
   }
+
+	private void addProperty(XMLProperty child) {
+		String name = child.getPropertyName();
+		propNames.add(name);
+		setProperty(name, child, -1);
+	}
+
+	private Map<String, XMLControl> getChildMap() {
+		if (childMap == null) {
+//			XMLControl[] children = getChildControls();
+			childMap = new HashMap<String, XMLControl>();
+//			for (int i = 0; i < children.length; i++) {
+//				childMap.put(children[i].getPropertyName(), children[i]);
+//			}
+		}
+		return childMap;
+	}
 
   /**
    * Reads the current input into a property element.
@@ -1481,35 +1787,26 @@ public class XMLControlElement implements XMLControl {
    */
   private XMLPropertyElement readProperty(XMLPropertyElement prop, String xml) throws IOException {
     // set property name
-    prop.name = xml.substring(xml.indexOf("name=")+6, xml.indexOf("type=")-2); //$NON-NLS-1$ //$NON-NLS-2$
+		prop.name = XML.getAttr(xml, "name", null); //$NON-NLS-1$
     // set property type
-    xml = xml.substring(xml.indexOf("type=")+6);                               //$NON-NLS-1$
-    prop.type = xml.substring(0, xml.indexOf("\""));                           //$NON-NLS-1$
+		prop.type = XMLProperty.getTypeCode(XML.getAttr(xml, "type", null)); //$NON-NLS-1$
     // set property content and className
-    if(prop.type.equals("array")||prop.type.equals("collection")) {                            //$NON-NLS-1$ //$NON-NLS-2$
-      xml = xml.substring(xml.indexOf("class=")+7);                                            //$NON-NLS-1$
-      String className = xml.substring(0, xml.indexOf("\""));                                  //$NON-NLS-1$
-      // workaround for media package name change
-      int i = className.lastIndexOf(".");                                                      //$NON-NLS-1$
-      if(i>-1) {
-        String packageName = className.substring(0, i);
-        if(packageName.endsWith("org.opensourcephysics.media")) {                              //$NON-NLS-1$
-          className = packageName+".core"+className.substring(i);                              //$NON-NLS-1$
-        }
-      }
-      prop.className = className;
-      if(xml.indexOf("/>")!=-1) {                                                              // property closing tag on same line //$NON-NLS-1$
+		switch (prop.type) {
+		case XMLProperty.TYPE_ARRAY: //$NON-NLS-1$
+		case XMLProperty.TYPE_COLLECTION: //$NON-NLS-1$
+			prop.className = getClassName(xml);
+			if (xml.indexOf("/>") >= 0) { // property closing tag on same line //$NON-NLS-1$
         return prop;
       }
       xml = input.readLine();
-      while(xml.indexOf("<property")!=-1) {                                                    //$NON-NLS-1$
+			while (xml.indexOf("<property") >= 0) { //$NON-NLS-1$
         prop.content.add(readProperty(new XMLPropertyElement(prop), xml));
         xml = input.readLine();
       }
     } else if(prop.type.equals("object")) {                                                    //$NON-NLS-1$
     	// add XMLControl unless value is null
-    	if (xml.indexOf(">null</property")==-1) { //$NON-NLS-1$
-	      XMLControlElement control = readObject(new XMLControlElement(prop), input.readLine());
+			if (xml.indexOf(">null</property") < 0) { //$NON-NLS-1$
+				XMLControlElement control = readObject(new XMLControlElement(prop), input.readLine(), null);
 	      prop.content.add(control);
 	      prop.className = control.className;    		
     	}
@@ -1519,16 +1816,17 @@ public class XMLControlElement implements XMLControl {
         while(s.indexOf(XML.CDATA_POST+"</property>")==-1) {                                   // look for end tag //$NON-NLS-1$
           s += XML.NEW_LINE+input.readLine();
         }
-        xml = s.substring(0, s.indexOf(XML.CDATA_POST+"</property>")+XML.CDATA_POST.length()); //$NON-NLS-1$
-      } else {
+			//$FALL-THROUGH$
+		default:			
+			// int, double, boolean or string types
+			// BH 2020.11.21 was 
+			//if (xml.indexOf(XML.CDATA_PRE) != -1) {
+				//String s = xml.substring(xml.indexOf(XML.CDATA_PRE));
+			// but that includes CDATA_PRE in the contents		
         String s = xml.substring(xml.indexOf(">")+1);                                          //$NON-NLS-1$
         while(s.indexOf("</property>")==-1) {                                                  // look for end tag //$NON-NLS-1$
           s += XML.NEW_LINE+input.readLine();
         }
-        xml = s.substring(0, s.indexOf("</property>"));                                        //$NON-NLS-1$
-      }
-      prop.content.add(xml);
-    }
     return prop;
   }
 
@@ -1538,7 +1836,7 @@ public class XMLControlElement implements XMLControl {
    * @param level the indent level
    * @return the space
    */
-  private String indent(int level) {
+	private static String indent(int level) {
     String space = ""; //$NON-NLS-1$
     for(int i = 0; i<XML.INDENT*level; i++) {
       space += " "; //$NON-NLS-1$
@@ -1547,19 +1845,59 @@ public class XMLControlElement implements XMLControl {
   }
 
   /**
+	 * For Tracker, tap into TrackerIO.asyncLoader to check to see if 
+	 * this FrameData needs so be adjusted based on the 
+	 * VideoControl property "frameshift". 
+	 * 
+	 * @param o
+	 * @param data
+	 * @return
+	 */
+    public static Object getAdjustedFrameData(Object o, Object data) {
+		if (!(o instanceof Object[]))
+			return o;
+		Object[] a = (Object[]) o;
+		return (a.length <= 1 || !(data instanceof FrameDataAdjusterI)
+				 ? a : ((FrameDataAdjusterI) data).adjustFrameData(a));
+	}
+
+    private static Object getPropValue(XMLProperty prop, Object data) {
+		switch (prop.getPropertyType()) {
+		case XMLProperty.TYPE_OBJECT: // $NON-NLS-1$
+			return objectValue(prop, data);
+		case XMLProperty.TYPE_ARRAY: // $NON-NLS-1$
+			return arrayValue(prop, data);
+		case XMLProperty.TYPE_COLLECTION: // $NON-NLS-1$
+			return collectionValue(prop, data);
+		case XMLProperty.TYPE_INT: // $NON-NLS-1$
+			return Integer.valueOf(intValue(prop));
+		case XMLProperty.TYPE_DOUBLE: // $NON-NLS-1$
+			return Double.valueOf(doubleValue(prop));
+		case XMLProperty.TYPE_BOOLEAN: // $NON-NLS-1$
+			return Boolean.valueOf(booleanValue(prop));
+		case XMLProperty.TYPE_STRING: // $NON-NLS-1$
+			return stringValue(prop);
+		}
+		return null;
+	}
+
+	/**
    * Returns the object value of the specified property. May return null.
    *
    * @param prop the property
    * @return the array
    */
-  private Object objectValue(XMLProperty prop) {
-    if(!prop.getPropertyType().equals("object")) { //$NON-NLS-1$
+	private static Object objectValue(XMLProperty prop, Object data) {
+		if (prop.getPropertyType() != XMLProperty.TYPE_OBJECT) { //$NON-NLS-1$
       return null;
     }
     if (prop.getPropertyContent().isEmpty()) 
     	return null;
-    XMLControl control = (XMLControl) prop.getPropertyContent().get(0);
-    return control.loadObject(null);
+		Object content = prop.getPropertyContent().get(0);
+		if (!(content instanceof XMLControl))
+			return null;
+		XMLControl control = (XMLControl) content;
+		return control.loadObject(null, data);
   }
 
   /**
@@ -1568,8 +1906,8 @@ public class XMLControlElement implements XMLControl {
    * @param prop the property
    * @return the value
    */
-  private double doubleValue(XMLProperty prop) {
-    if(!prop.getPropertyType().equals("double")) { //$NON-NLS-1$
+	private static double doubleValue(XMLProperty prop) {
+		if (prop.getPropertyType() != XMLProperty.TYPE_DOUBLE) { //$NON-NLS-1$
       return Double.NaN;
     }
     return Double.parseDouble((String) prop.getPropertyContent().get(0));
@@ -1581,8 +1919,8 @@ public class XMLControlElement implements XMLControl {
    * @param prop the property
    * @return the value
    */
-  private int intValue(XMLProperty prop) {
-    if(!prop.getPropertyType().equals("int")) { //$NON-NLS-1$
+	private static int intValue(XMLProperty prop) {
+		if (prop.getPropertyType() != XMLProperty.TYPE_INT) { //$NON-NLS-1$
       return Integer.MIN_VALUE;
     }
     return Integer.parseInt((String) prop.getPropertyContent().get(0));
@@ -1594,7 +1932,7 @@ public class XMLControlElement implements XMLControl {
    * @param prop the property
    * @return the value
    */
-  private boolean booleanValue(XMLProperty prop) {
+	private static boolean booleanValue(XMLProperty prop) {
     return prop.getPropertyContent().get(0).equals("true"); //$NON-NLS-1$
   }
 
@@ -1604,16 +1942,10 @@ public class XMLControlElement implements XMLControl {
    * @param prop the property
    * @return the value
    */
-  private String stringValue(XMLProperty prop) {
-    if(!prop.getPropertyType().equals("string")) { //$NON-NLS-1$
-      return null;
+	private static String stringValue(XMLProperty prop) {
+		return (prop.getPropertyType() == XMLProperty.TYPE_STRING ? //$NON-NLS-1$
+				XML.removeCDATA((String) prop.getPropertyContent().get(0)) : null);
     }
-    String content = (String) prop.getPropertyContent().get(0);
-    if(content.indexOf(XML.CDATA_PRE)!=-1) {
-      content = content.substring(content.indexOf(XML.CDATA_PRE)+XML.CDATA_PRE.length(), content.indexOf(XML.CDATA_POST));
-    }
-    return content;
-  }
 
   /**
    * Returns the array value of the specified property. May return null.
@@ -1621,8 +1953,8 @@ public class XMLControlElement implements XMLControl {
    * @param prop the property
    * @return the array
    */
-  private Object arrayValue(XMLProperty prop) {
-    if(!prop.getPropertyType().equals("array")) { //$NON-NLS-1$
+	private static Object arrayValue(XMLProperty prop, Object data) {
+		if (prop.getPropertyType() != XMLProperty.TYPE_ARRAY) { //$NON-NLS-1$
       return null;
     }
     Class<?> componentType = prop.getPropertyClass().getComponentType();
@@ -1654,36 +1986,43 @@ public class XMLControlElement implements XMLControl {
       XMLProperty next = (XMLProperty) it.next();
       index = next.getPropertyName();
       n = Integer.parseInt(index.substring(1, index.indexOf("]"))); //$NON-NLS-1$
-      String type = next.getPropertyType();
-      if(type.equals("object")) {                                   //$NON-NLS-1$
-        Array.set(array, n, objectValue(next));
-      } else if(type.equals("int")) {                               //$NON-NLS-1$
+			switch (next.getPropertyType()) {
+			case XMLProperty.TYPE_OBJECT:
+				Array.set(array, n, objectValue(next, data));
+				break;
+			case XMLProperty.TYPE_INT:
         int val = intValue(next);
         if(Object.class.isAssignableFrom(componentType)) {
-          Array.set(array, n, new Integer(val));
+					Array.set(array, n, Integer.valueOf(val));
         } else {
           Array.setInt(array, n, val);
         }
-      } else if(type.equals("double")) {                            //$NON-NLS-1$
-        double val = doubleValue(next);
+				break;
+			case XMLProperty.TYPE_DOUBLE:
+				double d = doubleValue(next);
         if(Object.class.isAssignableFrom(componentType)) {
-          Array.set(array, n, new Double(val));
+					Array.set(array, n, Double.valueOf(d));
         } else {
-          Array.setDouble(array, n, val);
+					Array.setDouble(array, n, d);
         }
-      } else if(type.equals("boolean")) {                           //$NON-NLS-1$
-        boolean val = booleanValue(next);
+				break;
+			case XMLProperty.TYPE_BOOLEAN:
+				boolean b = booleanValue(next);
         if(Object.class.isAssignableFrom(componentType)) {
-          Array.set(array, n, new Boolean(val));
+					Array.set(array, n, Boolean.valueOf(b));
         } else {
-          Array.setBoolean(array, n, val);
+					Array.setBoolean(array, n, b);
         }
-      } else if(type.equals("string")) {                            //$NON-NLS-1$
+				break;
+			case XMLProperty.TYPE_STRING:
         Array.set(array, n, stringValue(next));
-      } else if(type.equals("array")) {                             //$NON-NLS-1$
-        Array.set(array, n, arrayValue(next));
-      } else if(type.equals("collection")) {                        //$NON-NLS-1$
-        Array.set(array, n, collectionValue(next));
+				break;
+			case XMLProperty.TYPE_ARRAY:
+				Array.set(array, n, arrayValue(next, data));
+				break;
+			case XMLProperty.TYPE_COLLECTION:
+				Array.set(array, n, collectionValue(next, data));
+				break;
       }
     }
     return array;
@@ -1691,15 +2030,21 @@ public class XMLControlElement implements XMLControl {
 
   /**
    * Returns the array value of the specified array string. May return null.
-   * An array string must start and end with braces and contain only
-   * int, double and boolean types.
    *
-   * @param arrayString the array string
+	 * BH: modified to allow trailing null:
+	 * 
+	 * "{,{1,2,3},{4,5,6},}"  --> [null, [1,2,3], [4,5,6], null], not [null, [1,2,3], [4,5,6]]
+	 * 
+	 * An array string must start and end with braces and contain only int, double,
+	 * or boolean
+	 *
+	 * @param s   the array string
    * @param componentType the component type of the array
    * @return the array
    */
-  private Object arrayValue(String arrayString, Class<?> componentType) {
-    if(!(arrayString.startsWith("{")&&arrayString.endsWith("}"))) { //$NON-NLS-1$ //$NON-NLS-2$
+	private static Object arrayValue(String s, Class<?> componentType) {
+		System.out.println(s);
+		if (!(s.startsWith("{") && s.endsWith("}"))) { //$NON-NLS-1$ //$NON-NLS-2$
       return null;
     }
     // trim the outer braces
@@ -1783,8 +2128,38 @@ public class XMLControlElement implements XMLControl {
         boolean bool = it.next().equals("true"); //$NON-NLS-1$
         Array.setBoolean(array, n++, bool);
       }
+		return array;
     }
-    return array;
+
+//	static {
+//		System.out.println(Arrays.toString((int[][]) arrayValue("{,,,,}", new int[0].getClass())));
+//		System.out.println(Arrays.toString((int[][]) arrayValue("{{1}}", new int[0].getClass())));
+//		System.out.println(Arrays.toString((int[][]) arrayValue("{,,{1,2,3},,{4,5,6},,}", new int[0].getClass())));
+//		System.out.println(Arrays.toString((int[][]) arrayValue("{,,,{1,2,3},,,{4,5,6},,,}", new int[0].getClass())));
+//		System.out.println(Arrays.toString((int[][]) arrayValue("{,{1,2,3},{4,5,6},}", new int[0].getClass())));
+//		System.out.println("OK");
+//		
+//	}
+	
+	/**
+	 * Returns the index of the closing brace corresponding to the opening brace at
+	 * the given index in an array string.
+	 *
+	 * @param s         the array string
+	 * @param pt the index of the opening brace
+	 * @param n termination index
+	 * @return the index of the closing brace
+	 */
+	private static int indexOfClosingBrace(String s, int pt, int n) {
+		for (int c = 0, i = pt; i < n; i++) {
+			switch (s.charAt(i)) {
+			case '{':
+				c++;
+				break;
+			case '}':
+				c--;
+				if (c == 0)
+					return i;
   }
 
   /**
@@ -1794,8 +2169,8 @@ public class XMLControlElement implements XMLControl {
    * @return the array
    */
   @SuppressWarnings("unchecked")
-  private Object collectionValue(XMLProperty prop) {
-    if(!prop.getPropertyType().equals("collection")) { //$NON-NLS-1$
+	private static Object collectionValue(XMLProperty prop, Object data) {
+		if (prop.getPropertyType() != XMLProperty.TYPE_COLLECTION) { //$NON-NLS-1$
       return null;
     }
     Class<?> classType = prop.getPropertyClass();
@@ -1807,15 +2182,19 @@ public class XMLControlElement implements XMLControl {
       Iterator<Object> it = content.iterator();
       while(it.hasNext()) {
         XMLProperty next = (XMLProperty) it.next();
-        String type = next.getPropertyType();
-        if(type.equals("object")) {            //$NON-NLS-1$
-          c.add(objectValue(next));
-        } else if(type.equals("string")) {     //$NON-NLS-1$
+				switch (next.getPropertyType()) {
+				case XMLProperty.TYPE_OBJECT:
+					c.add(objectValue(next, data));
+					break;
+				case XMLProperty.TYPE_STRING: //$NON-NLS-1$
           c.add(stringValue(next));
-        } else if(type.equals("array")) {      //$NON-NLS-1$
-          c.add(arrayValue(next));
-        } else if(type.equals("collection")) { //$NON-NLS-1$
-          c.add(collectionValue(next));
+					break;
+				case XMLProperty.TYPE_ARRAY: //$NON-NLS-1$
+					c.add(arrayValue(next, data));
+					break;
+				case XMLProperty.TYPE_COLLECTION: //$NON-NLS-1$
+					c.add(collectionValue(next, data));
+					break;
         }
       }
       return c;
@@ -1857,24 +2236,24 @@ public class XMLControlElement implements XMLControl {
 }
 
 /*
- * Open Source Physics software is free software; you can redistribute
- * it and/or modify it under the terms of the GNU General Public License (GPL) as
+ * Open Source Physics software is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License (GPL) as
  * published by the Free Software Foundation; either version 2 of the License,
  * or(at your option) any later version.
-
+ * 
  * Code that uses any portion of the code in the org.opensourcephysics package
- * or any subpackage (subdirectory) of this package must must also be be released
- * under the GNU GPL license.
+ * or any subpackage (subdirectory) of this package must must also be be
+ * released under the GNU GPL license.
  *
- * This software is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * This software is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+ * details.
  *
- * You should have received a copy of the GNU General Public License
- * along with this; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston MA 02111-1307 USA
- * or view the license online at http://www.gnu.org/copyleft/gpl.html
+ * You should have received a copy of the GNU General Public License along with
+ * this; if not, write to the Free Software Foundation, Inc., 59 Temple Place,
+ * Suite 330, Boston MA 02111-1307 USA or view the license online at
+ * http://www.gnu.org/copyleft/gpl.html
  *
  * Copyright (c) 2017  The Open Source Physics project
  *                     http://www.opensourcephysics.org
