@@ -2,7 +2,7 @@
  * Open Source Physics software is free software as described near the bottom of this code file.
  *
  * For additional information and documentation on Open Source Physics please see:
- * <https://www.compadre.org/osp/>
+ * <http://www.opensourcephysics.org/>
  */
 
 package org.opensourcephysics.ejs.control;
@@ -37,7 +37,8 @@ public class ParsedEjsControl extends EjsControl implements SimControl {
    * @param var String
    * @return double
    */
-  public double getDouble(String var) {
+  @Override
+public double getDouble(String var) {
     Value value = getValue(var);
     if(value instanceof DoubleValue) {
       return super.getDouble(var);
@@ -58,16 +59,17 @@ public class ParsedEjsControl extends EjsControl implements SimControl {
    * @param var String
    * @return Object
    */
-  public Object getObject(String var) {
+  @Override
+public Object getObject(String var) {
     Value value = getValue(var);
     if(value==null) {
       return null;
     } else if(value instanceof IntegerValue) {
-      return new Integer(super.getInt(var));
+      return Integer.valueOf(super.getInt(var));
     } else if(value instanceof DoubleValue) {
       return new Double(super.getDouble(var));
     } else if(value instanceof BooleanValue) {
-      return new Boolean(super.getBoolean(var));
+      return Boolean.valueOf(super.getBoolean(var));
     } else if(value instanceof StringValue) {
       return super.getString(var);
     }
@@ -82,7 +84,8 @@ public class ParsedEjsControl extends EjsControl implements SimControl {
    * @param var String
    * @return double
    */
-  public int getInt(String var) {
+  @Override
+public int getInt(String var) {
     Value value = getValue(var);
     if(value instanceof IntegerValue) {
       return super.getInt(var);
@@ -99,28 +102,34 @@ public class ParsedEjsControl extends EjsControl implements SimControl {
   }
 
   // Ejs Control properties are set within the model.  Variables can be changed at any time.
-  public void removeParameter(String name) {
+  @Override
+public void removeParameter(String name) {
     setValue(name, (Object) null);
     variableTable.remove(name);
   }
 
-  public void setAdjustableValue(String name, boolean val) {
+  @Override
+public void setAdjustableValue(String name, boolean val) {
     setValue(name, val);
   }
 
-  public void setAdjustableValue(String name, double val) {
+  @Override
+public void setAdjustableValue(String name, double val) {
     setValue(name, val);
   }
 
-  public void setAdjustableValue(String name, int val) {
+  @Override
+public void setAdjustableValue(String name, int val) {
     setValue(name, val);
   }
 
-  public void setAdjustableValue(String name, Object val) {
+  @Override
+public void setAdjustableValue(String name, Object val) {
     setValue(name, val);
   }
 
-  public void setParameterToFixed(String name, boolean fixed) {
+  @Override
+public void setParameterToFixed(String name, boolean fixed) {
     //  Do nothing here.  Model should set visual element's enabled and editable property.
   }
 
@@ -146,6 +155,6 @@ public class ParsedEjsControl extends EjsControl implements SimControl {
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston MA 02111-1307 USA
  * or view the license online at http://www.gnu.org/copyleft/gpl.html
  *
- * Copyright (c) 2019  The Open Source Physics project
- *                     https://www.compadre.org/osp
+ * Copyright (c) 2024  The Open Source Physics project
+ *                     http://www.opensourcephysics.org
  */
