@@ -2,7 +2,7 @@
  * Open Source Physics software is free software as described near the bottom of this code file.
  *
  * For additional information and documentation on Open Source Physics please see:
- * <https://www.compadre.org/osp/>
+ * <http://www.opensourcephysics.org/>
  */
 
 package org.opensourcephysics.ejs.control.swing;
@@ -44,7 +44,8 @@ public class ControlSlider extends ControlSwingElement {
     super(_visual);
   }
 
-  protected java.awt.Component createVisual(Object _visual) {
+  @Override
+protected java.awt.Component createVisual(Object _visual) {
     if(_visual instanceof JSlider) {
       slider = (JSlider) _visual;
     } else {
@@ -84,7 +85,8 @@ public class ControlSlider extends ControlSwingElement {
     }
   }
 
-  public void reset() {
+  @Override
+public void reset() {
     if(defaultValueSet) {
       setTheValue(defaultValue);
       variableChanged(VARIABLE, internalValue);
@@ -96,7 +98,8 @@ public class ControlSlider extends ControlSwingElement {
   // ------------------------------------------------
   static private java.util.ArrayList<String> infoList = null;
 
-  public java.util.ArrayList<String> getPropertyList() {
+  @Override
+public java.util.ArrayList<String> getPropertyList() {
     if(infoList==null) {
       infoList = new java.util.ArrayList<String>();
       infoList.add("variable");    //$NON-NLS-1$
@@ -116,7 +119,8 @@ public class ControlSlider extends ControlSwingElement {
     return infoList;
   }
 
-  public String getPropertyInfo(String _property) {
+  @Override
+public String getPropertyInfo(String _property) {
     if(_property.equals("variable")) { //$NON-NLS-1$
       return "int|double";             //$NON-NLS-1$
     }
@@ -162,7 +166,8 @@ public class ControlSlider extends ControlSwingElement {
   // ------------------------------------------------
   // Set and Get the values of the properties
   // ------------------------------------------------
-  public void setValue(int _index, Value _value) {
+  @Override
+public void setValue(int _index, Value _value) {
     switch(_index) {
        case VARIABLE :
          if(internalValue.value!=_value.getDouble()) {
@@ -234,7 +239,8 @@ public class ControlSlider extends ControlSwingElement {
     }
   }
 
-  public void setDefaultValue(int _index) {
+  @Override
+public void setDefaultValue(int _index) {
     switch(_index) {
        case VARIABLE :
          break;                                                                      // Do nothing
@@ -281,7 +287,8 @@ public class ControlSlider extends ControlSwingElement {
     }
   }
 
-  public Value getValue(int _index) {
+  @Override
+public Value getValue(int _index) {
     switch(_index) {
        case VARIABLE :
          return internalValue;
@@ -317,7 +324,7 @@ public class ControlSlider extends ControlSwingElement {
     if(ticksFormat!=null) {
       java.util.Hashtable<Integer, JLabel> table = new java.util.Hashtable<Integer, JLabel>();
       for(int i = 0; i<=RESOLUTION; i += 2*spacing) {
-        table.put(new Integer(i), new javax.swing.JLabel(ticksFormat.format(minimum+i/scale)));
+        table.put(Integer.valueOf(i), new javax.swing.JLabel(ticksFormat.format(minimum+i/scale)));
       }
       slider.setLabelTable(table);
     }
@@ -355,7 +362,8 @@ public class ControlSlider extends ControlSwingElement {
   // Inner classes
   // -------------------------------------
   private class MyChangeListener implements javax.swing.event.ChangeListener {
-    public void stateChanged(javax.swing.event.ChangeEvent e) {
+    @Override
+	public void stateChanged(javax.swing.event.ChangeEvent e) {
       if(recalculate) {
         double value = minimum+slider.getValue()/scale;
         // if (internalValue.value==value) return;
@@ -371,11 +379,13 @@ public class ControlSlider extends ControlSwingElement {
   }
 
   private class MyMouseListener extends java.awt.event.MouseAdapter {
-    public void mousePressed(java.awt.event.MouseEvent evt) {
+    @Override
+	public void mousePressed(java.awt.event.MouseEvent evt) {
       invokeActions(ControlSwingElement.ACTION_PRESS);
     }
 
-    public void mouseReleased(java.awt.event.MouseEvent evt) {
+    @Override
+	public void mouseReleased(java.awt.event.MouseEvent evt) {
       invokeActions(ControlElement.ACTION);
     }
 
@@ -403,6 +413,6 @@ public class ControlSlider extends ControlSwingElement {
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston MA 02111-1307 USA
  * or view the license online at http://www.gnu.org/copyleft/gpl.html
  *
- * Copyright (c) 2019  The Open Source Physics project
- *                     https://www.compadre.org/osp
+ * Copyright (c) 2024  The Open Source Physics project
+ *                     http://www.opensourcephysics.org
  */
